# q-local-assistant

./: .gitignore  Assistant_Implementation_Roadmap.md  Letta Specialist.af  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/agents/: spec-writer.md
.github/copilot-agents/: spec-writer.md
docs/: coding-standards.md
docs/150-workflow/: implementation-roadmap.md  project-philosophy.md  workflow-rules.md
docs/200-features/: FEATURE-0001-agent-playbook-foundations.md
docs/300-agents/: architect.md  coder.md  documentation-specialist.md  orchestrator.md  reviewer.md  spec-writer.md  tester.md
docs/daily-logs/: 2025-12-12.md  TEMPLATE.md
docs/dev-100-architecture/: architecture-overview.md
docs/dev-150-workflow/: context-management.md  workflow-rules.md
docs/dev-200-features/: FEATURE-0001-agent-playbook-foundations.md
docs/dev-300-agents/: architect.md  coder.md  documentation-specialist.md  orchestrator.md  reviewer.md  tester.md
docs/dev-daily-logs/: 2025-12-12.md
docs/external-integrations/letta/: README.md  agent-configuration.md  api-quickref.md  memory-system.md  tool-development.md
docs/external-integrations/letta/code-examples/: README.md  agent-with-tools.py  client-usage.py  minimal-agent.py
docs/prod-100-architecture/: README.md
docs/prod-200-components/: README.md
docs/prod-300-agents/: README.md
docs/prod-400-integrations/: README.md  work-helper-feature.md
docs/prod-500-behaviors/: README.md
src/common/: __init__.py  letta_client.py
src/dev_agents/: __init__.py  coder.py
src/dev_tools/: __init__.py  file_operations.py
src/prod_agents/: __init__.py
src/prod_tools/: __init__.py
src/services/: __init__.py
tests/unit/: test_file_operations.py
